--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appnope==0.1.4
 asttokens==2.4.1
+BackTranslation==0.3.1
 certifi==2024.6.2
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
@@ -9,8 +11,16 @@ decorator==5.1.1
 executing==2.0.1
 filelock==3.14.0
 fsspec==2024.6.0
+googletrans==4.0.0rc1
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.6.1
+httpcore==0.9.1
+httpx==0.13.3
 huggingface-hub==0.23.2
-idna==3.7
+hyperframe==5.2.0
+idna==2.10
 ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
@@ -42,11 +52,13 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 regex==2024.5.15
 requests==2.32.3
+rfc3986==1.5.0
 safetensors==0.4.3
 scikit-learn==1.5.0
 scipy==1.13.1
 sentence-transformers==3.0.0
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.3
 sympy==1.12.1
 threadpoolctl==3.5.0
