--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/src/main.py",
             "console": "integratedTerminal",
-            "args": ["--mode", "test"],
+            "args": ["--mode", "sample"],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
             }
