--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.7.0
 appnope==0.1.4
 asttokens==2.4.1
+attrs==23.2.0
 BackTranslation==0.3.1
 blis==0.7.11
 catalogue==2.0.10
@@ -17,6 +20,7 @@ decorator==5.1.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 executing==2.0.1
 filelock==3.14.0
+frozenlist==1.4.1
 fsspec==2024.6.0
 googletrans==4.0.0rc1
 h11==0.9.0
@@ -37,12 +41,15 @@ jupyter_client==8.6.2
 jupyter_core==5.7.2
 langcodes==3.4.0
 language_data==1.2.0
+lightning==2.3.3
+lightning-utilities==0.11.5
 marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.0.5
 murmurhash==1.0.10
 nest-asyncio==1.6.0
 networkx==3.3
@@ -63,6 +70,7 @@ pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
+pytorch-lightning==2.3.3
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
@@ -89,6 +97,7 @@ thinc==8.2.5
 threadpoolctl==3.5.0
 tokenizers==0.19.1
 torch==2.3.0
+torchmetrics==1.4.0.post0
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
@@ -101,3 +110,4 @@ wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
 wrapt==1.16.0
+yarl==1.9.4
